--- a/Test_Project/web/index.html
+++ b/Test_Project/web/index.html
@@ -16,8 +16,8 @@
 </form>
 <br></br>
 
-<p><font color="blue">Team_DataS : fgfr</font></p>
-<form action="http://www.google.gr">
+<p><font color="blue">Team_DataS : </font></p>
+<form action="Choose_TeamS">
     <input type="submit" value="Run Servlet" 
          name="Submit" id="frm2_submit" />
 </form>
