--- a/Test_Project/web/index.html
+++ b/Test_Project/web/index.html
@@ -9,22 +9,22 @@
 <img src="xa.png" alt="W3Schools.com" style="width:304px;height:228px;">
 <p><font color="black"> Options (Servlets) :</font></p>
 
-<p><font color="red">Game_DataS :dfds </font> </p> 
+<p><font color="red">Insert Data Game : </font> </p> 
 <form action="gameform.html">
     <input type="submit" value="Run Servlet" 
          name="Submit" id="frm1_submit" />
 </form>
 <br></br>
 
-<p><font color="blue">Team_DataS : </font></p>
+<p><font color="blue">Display Team Game Info : </font></p>
 <form action="Choose_TeamS">
     <input type="submit" value="Run Servlet" 
          name="Submit" id="frm2_submit" />
 </form>
 <br></br>
 
-<p><font color="orange">Player_DataS : asas</font></p>
-<form action="http://www.google.gr">
+<p><font color="orange">5 Question : </font></p>
+<form action="Choose_PlayerS">
     <input type="submit" value="Run Servlet" 
          name="Submit" id="frm3_submit" />
 </form>
